<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.review.WAStickerPreviewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_media_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56sdp"
        android:paddingHorizontal="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_media_back"
            android:layout_width="@dimen/_37sdp"
            android:layout_height="@dimen/_37sdp"
            android:contentDescription="Navigate Back"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlayerFilename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/figma_dark_text"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_media_back"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/wa_sticker"
            />

        <ImageView
            android:id="@+id/btn_media_help"
            android:layout_width="@dimen/_37sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:src="@drawable/ic_help_question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_media_select_all"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_media_select_all"
            android:layout_width="@dimen/_37sdp"
            android:layout_height="@dimen/_37sdp"
            android:src="@drawable/ic_menu"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/image_sticker"
        android:layout_width="@dimen/_255sdp"
        android:layout_height="@dimen/_289sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_media_toolbar" />


    <!-- ================= FLOATING ACTION SELECTION BOTTOM DECK BAR ================= -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_player_footer_deck"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:translationZ="@dimen/_6sdp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/_28sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <!-- Action: Resend Configuration -->
            <LinearLayout
                android:id="@+id/btn_player_action_resend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_send_navigation"
                    app:tint="@color/figma_forest_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/resend"
                    android:textColor="@color/action_footer_text"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Action: Share Media Payload -->
            <LinearLayout
                android:id="@+id/btn_player_action_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_share"
                    app:tint="@color/figma_forest_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/share"
                    android:textColor="@color/action_footer_text"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Action: Delete Target File -->
            <LinearLayout
                android:id="@+id/btn_player_action_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_trash_bin_red"
                    app:tint="@color/action_delete_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/delete"
                    android:textColor="@color/action_delete_red"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

